# command

./: .ra.config.json  Cargo.toml  Readme.md  TODO.md
src/: deserialize.rs  lib.rs  rbf_write.rs  std_write.rs
src/embedded/: mod.rs  rbf_write.rs
src/error/: defmt_derive.rs  defmt_impl.rs  mod.rs  owned.rs
src/owned/: mod.rs
src/serde_derive/: mod.rs  std_write.rs
src/serde_impl/: mod.rs
