[package]
name = "command"
version = "0.1.0"
authors = ["Lainera <fistlain@hotmail.com>"]
edition = "2018"

[features]
default = []
std-write = []
rbf-write = ["ring_buffer"]
deserialize = ["serde"]

[dependencies]
ring_buffer = { git = "https://github.com/lainera/ring_buffer", optional = true }
serde = { version = "*", features = ["derive"], optional = true }

