[package]
name = "command"
version = "0.2.0"
authors = ["Lainera <fistlain@hotmail.com>"]
edition = "2018"

[features]
default = ["owned", "serde_impl"]
owned = []
serde_impl = ["serde", "serde_json"]
defmt_impl = ["defmt"]

[dependencies]
serde = { version = "~1.0", features = [], optional = true }
serde_json = { version = "~1.0.63", optional = true }
defmt = { version = "~0.3", optional = true }
